--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/3.6.2/fabric.min.js"> </script>
+</head>
+
 <body class="body_background">
 
 	<center>
@@ -24,6 +27,5 @@
 <canvas id="myCanvas" width="800" height="600"></canvas>
 	</center>
 	<script src="main.js"></script>
-    <script src="fabric.js"></script>
 </body>
 </html>
